# kvm-pilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  RESUME.md  SECURITY.md  compose.yaml  config.example.toml  llms.txt  pyproject.toml  server.json
.claude/skills/checkpoint/: SKILL.md  scan.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  firmware-report.yml  hardware-report.yml
.github/scripts/: build_wiki.py
.github/workflows/: ci.yml  firmware-ingest.yml  registry-publish.yml  release.yml  wiki-sync.yml
data/: test_runs.jsonl
docs/: CONTRIBUTING.md  README.md  SECURITY.md  amt-onboarding.md  amt.md  architecture.md  cli.md  configuration.md  decisions.md  driver-features.md  firmware-registry.md  firmware-update.md  getting-started.md  glkvm-field-notes.md  hardware-test-plan-ilo-idrac.md  plugin-development.md  redfish.md  reflexes.md  test-plan.md  troubleshooting.md  unattended-install.md
docs/analysis/: 2026-07-01-deep-review.md  2026-07-03-rm1pe-firmware-and-encoder.md  2026-07-08-e2e-leaner-cut.md  2026-07-08-perf-a13-a14.md
docs/assets/: demo.tape
examples/: bios_audit.py  power_cycle_verify.py  unattended_install.py
mcp_server/: README.md  requirements.txt  server.py
skill/: SKILL.md
src/kvm_pilot/: __about__.py  __init__.py  benchmark.py  bootstrap.py  calibrate.py  cli.py  client.py  config.py  efiboot.py  errors.py  firmware_registry.py  health.py  http.py  maturity.py  remote_ps.py  router.py  safety.py  ssh.py  support_matrix.py  test_report.py  wol.py
src/kvm_pilot/data/: firmware_registry.json  firmware_registry.schema.json  test_runs.jsonl
src/kvm_pilot/drivers/: __init__.py  base.py  fake.py  glkvm.py  ipmi.py  pikvm.py
src/kvm_pilot/drivers/amt/: __init__.py  driver.py  ider.py  redir.py  rfb.py  wsman.py
src/kvm_pilot/drivers/redfish/: __init__.py  driver.py  transport.py
src/kvm_pilot/mcp/: README.md  __init__.py  act.py  server.py
src/kvm_pilot/skill/: SKILL.md
src/kvm_pilot/skill/references/: interfaces.md  library.md  linux-install.md  recovery.md  setup.md  target-context.md
src/kvm_pilot/vision/: __init__.py  analyzer.py  anthropic.py  base.py  openai_compat.py
tests/: amt_emulator.py  amt_rfb_emulator.py  conftest.py  emulator.py  redfish_emulator.py  test_act.py  test_amt_driver.py  test_amt_ider.py  test_analyzer.py  test_benchmark.py  test_bootstrap.py  test_build_wiki_hcl.py  test_calibrate.py  test_cli.py  test_cli_redfish.py  test_client.py  test_compose_stack.py  test_config.py  test_docs_guards.py  test_driver_contract.py  test_drivers.py  test_efiboot.py  test_emulator.py  test_fake_driver.py  test_firmware_ingest.py  test_glkvm.py  test_health.py  test_http.py  test_ipmi.py  test_maturity.py  test_mcp_server.py  test_pikvm_family.py  test_redfish_boot.py  test_redfish_driver.py  test_remote_ps.py  test_router.py  test_safety.py  test_ssh.py  test_ssh_password.py  test_ssh_persist.py  (+6 more)
tests/integration/: conftest.py  test_amt_external.py  test_ipmi_external.py  test_redfish_external.py
