[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvm-pilot"
dynamic = ["version"]
description = "AI-driven bare-metal control for PiKVM and the GL.iNet GLKVM fork (GL-RM1 / GL-RM1PE)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "kvm-pilot contributors" }]
keywords = ["pikvm", "glkvm", "gl-rm1", "kvm", "ipkvm", "bare-metal", "automation", "vision", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
# Core has ZERO runtime dependencies (stdlib only). Extras are opt-in.
dependencies = []

[project.optional-dependencies]
totp = ["pyotp>=2.9"]
ws = ["websocket-client>=1.7"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
kvm-pilot = "kvm_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/DustinTrap/kvm-pilot"
Issues = "https://github.com/DustinTrap/kvm-pilot/issues"
Changelog = "https://github.com/DustinTrap/kvm-pilot/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/kvm_pilot/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kvm_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["kvm_pilot"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # long lines tolerated in docstrings/tables

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
