[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvm-pilot"
dynamic = ["version"]
description = "AI-driven bare-metal control for IP-KVMs (PiKVM, GL.iNet GLKVM, BliKVM) and Redfish BMCs (iDRAC, iLO, OpenBMC)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "kvm-pilot contributors" }]
keywords = [
    "pikvm", "glkvm", "blikvm", "gl-rm1", "kvm", "ipkvm",
    "redfish", "bmc", "idrac", "ilo", "openbmc",
    "bare-metal", "automation", "vision", "llm", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
# The client/driver code is stdlib-only at import time (websocket is lazily
# imported inside its own methods). `mcp` and `websocket-client` are base
# dependencies because they back core user-facing surfaces that must run from a
# plain `pip install kvm-pilot` (batteries-included rule, CLAUDE.md, #109):
#   - mcp: the bundled MCP server ships in the wheel.
#   - websocket-client: GL's video encoder is on-demand and a headless `snapshot`
#     must register a stream client over kvmd's WS to start it + keep it warm
#     (#142) — snapshot/classify/watch would otherwise 503 on an idle GL unit.
# Cap mcp below 2.0: mcp 2.x relocated `mcp.server.fastmcp` (FastMCP/Image), which
# the server imports; the cap also stops `pip install --pre kvm-pilot` from pulling
# the mcp 2.x beta into a fresh env (#110).
dependencies = ["mcp>=1.10,<2", "websocket-client>=1.9.0"]

[project.optional-dependencies]
totp = ["pyotp>=2.10.0"]
# Mouse auto-calibration (#128): Pillow decodes snapshots to locate the cursor.
# The calibrate-mouse CLI/MCP surface ships in base and errors actionably
# without it; the detection/fit math is stdlib and tested without Pillow.
calibrate = ["Pillow>=10.0"]
# `ws` retained for back-compat (`pip install kvm-pilot[ws]`); websocket-client is
# now a base dependency (see above), so this is a no-op alias.
ws = ["websocket-client>=1.9.0"]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]

[project.scripts]
kvm-pilot = "kvm_pilot.cli:main"
kvm-pilot-mcp = "kvm_pilot.mcp.server:main"

[project.urls]
Homepage = "https://github.com/DustinTrap/kvm-pilot"
Documentation = "https://github.com/DustinTrap/kvm-pilot/wiki"
Issues = "https://github.com/DustinTrap/kvm-pilot/issues"
Changelog = "https://github.com/DustinTrap/kvm-pilot/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/kvm_pilot/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kvm_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: opt-in end-to-end tests against an external Redfish emulator (sushy-tools); skipped unless sushy-emulator is installed or KVM_PILOT_REDFISH_URL is set",
]

[tool.coverage.run]
source = ["kvm_pilot"]
branch = true

[tool.coverage.report]
# CI gate (#56): the suite sits at ~81% (branch); 75 catches a real coverage
# collapse without being brittle about single-file refactors.
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # long lines tolerated in docstrings/tables

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.bandit]
# Stdlib-only HTTP client for self-managed KVM hardware. These bandit findings
# are intentional design, not vulnerabilities:
#   B101 assert_used     - a defensive assert guarding an unreachable retry branch
#   B107 hardcoded_password - the documented PiKVM default credential ("admin")
#   B110 try_except_pass - secret redaction must never raise
#   B310 urllib urlopen  - the core REST/vision calls; scheme is http(s) from config
exclude_dirs = ["tests"]
skips = ["B101", "B107", "B110", "B310"]
